--- a/peserta/index.html
+++ b/peserta/index.html
@@ -310,9 +310,7 @@
 		});
 	
 		$('.btn-back').click(function() {
-			$('.akun').hide();
-			$('.ujian').hide();
-			$('.utama').show();
+			halaman('home');
 		});
 	</script>
 	
