--- a/peserta/index.html
+++ b/peserta/index.html
@@ -303,11 +303,11 @@
 			$('.halaman').load('./modul/'+ file +'.html');
 		}
 		
-		$('.home').click(function() {
+		/*$('.home').click(function() {
 			$('.akun').hide();
 			$('.ujian').hide();
 			$('.utama').show();
-		});
+		});*/
 	
 		$('.btn-back').click(function() {
 			halaman('home');
