--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -9,7 +9,7 @@
 			<i class="flaticon-right-arrow"></i>
 		</li>
 		<li class="nav-item">
-			<a href="#">Akun Saya</a>
+			<a href="#">Profil Saya</a>
 		</li>
 	</ul>
 </div><br>
