--- a/peserta/index.html
+++ b/peserta/index.html
@@ -97,7 +97,7 @@
 									</li>
 									<li>
 										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="javascript:halaman('akun');" >Akun Saya</a>
+										<a class="dropdown-item" href="javascript:halaman('profil');" >Profil Saya</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" href="logout.php">Logout</a>
 									</li>
@@ -132,8 +132,8 @@
 							<div class="collapse in" id="collapseExample">
 								<ul class="nav">
 									<li>
-										<a href="javascript:halaman('akun');" >
-											<span class="link-collapse">Akun Saya</span>
+										<a href="javascript:halaman('profil');" >
+											<span class="link-collapse">Profil Saya</span>
 										</a>
 									</li>
 									
