--- a/peserta/index.html
+++ b/peserta/index.html
@@ -225,9 +225,9 @@
 
 				<!-- Halaman dinamis -->
 				
-				<div class="halaman">
+				<section class="halaman">
 					
-				</div>
+				</section>
 
 				<!-- end -->
 
