--- a/peserta/index.html
+++ b/peserta/index.html
@@ -301,6 +301,7 @@
 	
 		function halaman(file) {
 			$('.halaman').load('./modul/'+ file +'.html');
+			console.log(file);
 		}
 		
 		$('.home').click(function() {
