--- a/peserta/index.html
+++ b/peserta/index.html
@@ -294,7 +294,7 @@
 	<!-- Atlantis DEMO methods, don't include it in your project! 
 	<script src="../assets/js/setting-demo.js"></script> -->
 	
-	<script>
+	<script type="text/javascript">
 		/*$(document).ready(function() {
 			$('.halaman').load('./modul/home.html');
 		});*/
