--- a/peserta/modul/akun.html
+++ b/peserta/modul/akun.html
@@ -75,11 +75,11 @@
 									<label>Foto Profile</label>
 									<p>
 										<center>
-											<img src="../assets/img/user/<?=$data['foto'] ?>" class="img-thumbnail" style="height: 90px;width: 90px;">
+											<img src="../assets/img/user.png" class="img-thumbnail" style="height: 90px;width: 90px;">
 										</center>      		
 									</p>
 									<input type="file" name="foto"> 
-									<input type="hidden" name="id" value="<?=$data['id_guru'] ?>">       		
+									<input type="hidden" name="id" value="">       		
 								</div> 
 								<div class="form-group">      
 									<button name="updateProfile" type="submit" class="btn btn-primary btn-block">Simpan</button>
