--- a/peserta/modul/akun.html
+++ b/peserta/modul/akun.html
@@ -97,8 +97,8 @@
 				</div>
 				<div class="card-body">
 					<ul style="padding-left: 0px;">
-						<li class="contentnode"><dl><dt>Pertama kali mengakses situs</dt><dd><script>document.write(Cookies.get('pertamaLogin'))</script>Sat Jun 22 2024 20:51:27 GMT+0700 (Western Indonesia Time)</dd></dl></li>
-						<li class="contentnode"><dl><dt>Terakhir mengakses situs</dt><dd><script>document.write(Cookies.get('terakhirLogin'))</script>Sat Jun 22 2024 20:51:27 GMT+0700 (Western Indonesia Time)</dd></dl></li>
+						<li class="contentnode"><dl><dt>Pertama kali mengakses situs</dt><dd>Sat Jun 22 2024 20:51:27 GMT+0700 (Western Indonesia Time)</dd></dl></li>
+						<li class="contentnode"><dl><dt>Terakhir mengakses situs</dt><dd>Sat Jun 22 2024 20:51:27 GMT+0700 (Western Indonesia Time)</dd></dl></li>
 					</ul>
 				</div>
 			</div>
