--- a/peserta/modul/ujian.html
+++ b/peserta/modul/ujian.html
@@ -55,5 +55,5 @@
 			</div>
 		</div>
 	</div>
-	<a class="btn btn-default btn-block mb-1 btn-back"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a class="btn btn-default btn-block mb-1 btn-back" href=""><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div>
