--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -1,7 +1,7 @@
 <div class="page-header">
 	<ul class="breadcrumbs">
 		<li class="nav-home">
-			<a class="home">
+			<a class="home" href="">
 				<i class="flaticon-home"></i>
 			</a>
 		</li>
@@ -104,5 +104,5 @@
 			</div>
 		</div>
 	</div>
-	<a class="btn btn-default btn-block mb-1 btn-back"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a class="btn btn-default btn-block mb-1 btn-back" href=""><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div>
