--- a/peserta/index.html
+++ b/peserta/index.html
@@ -296,7 +296,6 @@
 	<script src="../assets/js/setting-demo.js"></script> -->
 	
 	<script type="text/javascript">
-		let halaman = $('.halaman');
 		/*$(document).ready(function() {
 			$('.halaman').load('./modul/home.html');
 		});*/
@@ -307,7 +306,7 @@
 			fetch('./modul/'+ file +'.html')
 			.then(res => res.text())
 			.then(data => {
-				halaman.innerHTML = data;
+				$('.halaman').innerHTML = data;
 				const parser = new DOMParser();
 				const doc = parser.parserFromString(data, 'text/html');
 				eval(doc.querySelector('script').textContent);
