--- a/peserta/index.html
+++ b/peserta/index.html
@@ -307,9 +307,9 @@
 			.then(res => res.text())
 			.then(data => {
 				$('.halaman').innerHTML = data;
-				const parser = new DOMParser();
-				const doc = parser.parseFromString(data, 'text/html');
-				eval(doc.querySelector('script').textContent);
+				//const parser = new DOMParser();
+				//const doc = parser.parseFromString(data, 'text/html');
+				//eval(doc.querySelector('script').textContent);
 			});
 		}
 		
