--- a/peserta/index.html
+++ b/peserta/index.html
@@ -306,7 +306,7 @@
 			fetch('./modul/'+ file +'.html')
 			.then(res => res.text())
 			.then(data => {
-				$('.halaman').innerHTML = data;
+				$('.halaman').append(data);
 				//const parser = new DOMParser();
 				//const doc = parser.parseFromString(data, 'text/html');
 				//eval(doc.querySelector('script').textContent);
