--- a/peserta/index.html
+++ b/peserta/index.html
@@ -305,17 +305,17 @@
 		});*/
 	
 		function halaman(file) {
-			/*$('.halaman').load('./modul/'+ file +'.html');
-			$('.halaman').html($('.halaman').html());*/
+			$('.halaman').load('./modul/'+ file +'.html');
+			$('.tagsJS').html($('.tagsJS').html());
 			console.log(file);
-			xHttpOP = new XMLHttpRequest();
+			/*xHttpOP = new XMLHttpRequest();
 			xHttpOP.onload = function() {
 				//$('.halaman').load('./modul/'+ file +'.html');
 				$('.halaman').innerHTML = this.responseText;
 				$('.tagsJS').html($('.tagsJS').html());
 			}
 			xHttpOP.open('GET', './modul/'+ file +'.html');
-			xHttpOP.send();
+			xHttpOP.send();*/
 		}
 		halaman('home');
 	</script>
