--- a/peserta/index.html
+++ b/peserta/index.html
@@ -246,7 +246,7 @@
 		
 	
 	</div>
-</body>
+
 	<div class="tagsJS">
 		<script type="text/javascript" src="../assets/js/page.js"></script>
 	</div>
@@ -306,7 +306,7 @@
 	
 		function halaman(file) {
 			$('.halaman').load('./modul/'+ file +'.html');
-			$('.tagsJS').html($('.tagsJS').html());
+			$('.halaman').append($('.tagsJS').html());
 			console.log(file);
 			/*xHttpOP = new XMLHttpRequest();
 			xHttpOP.onload = function() {
@@ -321,5 +321,5 @@
 	</script>
 	
 
-
+</body>
 </html>
