--- a/peserta/modul/ujian.html
+++ b/peserta/modul/ujian.html
@@ -109,9 +109,6 @@
 					<li>
 						Waktu : 180 menit (2 jam)
 					</li>
-					<li>
-						Kelas : <?=$jd['nama_kelas']; ?>
-					</li>
 				</ul>
 				<hr>
 				<a href="?page=absen&pelajaran=<?=$jd['id_mengajar'] ?> " class="btn btn-default btn-block text-left">
@@ -125,5 +122,5 @@
 			</div>	
 		</div>
 	</div>
-	<a href="javascript:history.back()" class="btn btn-default"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a class="btn btn-default btn-back"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div>
