--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -104,5 +104,5 @@
 			</div>
 		</div>
 	</div>
-	<a class="btn btn-default btn-block mb-1 btn-back"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a class="btn btn-default btn-back"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div>
