--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -5,7 +5,7 @@
 				<h2 class="text-white pb-2 fw-bold">Aplikasi OSN</h2>
 				<h5 class="text-white op-7 mb-2">Selamat Datang, <b class="text-warning">PUTRAKU RULIFF ABBAS</b></h5>
 			</div>
-			<div class="ml-md-auto py-2 py-md-0 text-white">
+			<div class="ml-md-auto py-2 py-md-0 text-white" style="font-size: 18px;">
 				<i class="fa fa-calendar"></i>
 				<span id="jam">00 : 00 : 00</span>
 				<!-- <a href="#" class="btn btn-white btn-border btn-round mr-2">Manage</a>
