--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -6,7 +6,7 @@
 				<h5 class="text-white op-7 mb-2">Selamat Datang, <b class="text-warning">PUTRAKU RULIFF ABBAS</b></h5>
 			</div>
 			<div class="ml-md-auto py-2 py-md-0 text-white" style="font-size: 18px;">
-				<i class="fa fa-calendar"></i>
+				<i class="fa fa-calendar fa-2x"></i>
 				<span id="jam">00 : 00 : 00</span>
 				<!-- <a href="#" class="btn btn-white btn-border btn-round mr-2">Manage</a>
 				<a href="#" class="btn btn-secondary btn-round">Add Customer</a> -->
