--- a/peserta/modul/ujian.html
+++ b/peserta/modul/ujian.html
@@ -55,5 +55,5 @@
 			</div>
 		</div>
 	</div>
-	<a class="btn btn-default btn-back col-md-3"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a class="btn btn-default btn-back btn-lg col-md-3"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div> 
