--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -7,7 +7,7 @@
 			</div>
 			<div class="ml-md-auto py-2 py-md-0 text-white">
 				<p><i class="fa fa-calendar fa-lg"></i>
-				<span class="hari-tanggal" style="font-size: 15px;">MINGGU, 22 JUNI 2024,</span>
+				<span class="hari-tanggal" style="font-size: 15px;"></span>
 				<span class="jam" style="font-size: 15px;">00 : 00 : 00</span></p>
 				<!-- <a href="#" class="btn btn-white btn-border btn-round mr-2">Manage</a>
 				<a href="#" class="btn btn-secondary btn-round">Add Customer</a> -->
