--- a/peserta/index.html
+++ b/peserta/index.html
@@ -255,6 +255,10 @@
 		/*.nav-link.active.show {
 			background: #1572e8;
 		}*/
+
+		.hari-tanggal {
+			text-transform: uppercase;
+		}
 		
 		dd {
 			margin-left: 10px;
