--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -19,7 +19,7 @@
 <div class="page-inner mt--5">
 	<div class="row mt--2">
 		<div class="col-md-6">
-			<div class="card full-height">
+			<div class="card">
 				<div class="card-body">
 					<div class="card-title">
 						<center>
