--- a/peserta/modul/home.html
+++ b/peserta/modul/home.html
@@ -84,13 +84,13 @@
 							<p>
 								<ul class="list-group">
 									<li class="list-group-item">
-										<a class="btn btn-primary btn-block text-left" href="javascript:{$('.utama').hide(); $('.tes-jaringan').show(); }">
+										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('tes_jaringan');">
 											<i class="fas fa-chevron-circle-right"></i>
 											<span class="sub-item">Tes Jaringan</span>
 										</a>
 									</li>
 									<li class="list-group-item">
-										<a class="btn btn-primary btn-block text-left" href="javascript:{$('.utama').hide(); $('.kalender').show(); }">
+										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('kalender');">
 											<i class="fas fa-chevron-circle-right"></i>
 											<span class="sub-item">Kalender</span>
 										</a>
