--- a/peserta/index.html
+++ b/peserta/index.html
@@ -89,7 +89,6 @@
 										<div class="user-box">
 											<div class="avatar-lg"><img src="../assets/img/user.jpg" alt="image profile" class="avatar-img rounded"></div>
 											<div class="u-text">
-												<h4><?=$data['nama_guru'] ?></h4>
 												<h4>PUTRAKU RULIFF ABBAS</h4>
 												<p class="text-muted"><?=$data['email'] ?></p>
 												<a href="?page=jadwal" class="btn btn-xs btn-secondary btn-sm">Jadwal Mengajar</a>
@@ -123,7 +122,6 @@
 							<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 								<span>
 								PUTRAKU RULIFF ABBAS
-									<?=$data['nama_guru'] ?>
 									<span class="user-level">OSN ASTRONOMI<?=$data['nip'] ?></span>
 									<span class="caret"></span>
 								</span>
@@ -171,7 +169,7 @@
 							<div class="collapse" id="sidebarLayouts">
 								<ul class="nav nav-collapse">
 									<li>
-										<a href="javascript:halaman('tes-jaringan');">
+										<a href="javascript:halaman('tes_jaringan');">
 											<span class="sub-item">Tes Jaringan</span>
 										</a>
 									</li>
