--- a/peserta/modul/tes_jaringan.html
+++ b/peserta/modul/tes_jaringan.html
@@ -53,5 +53,5 @@
 			</div>
 		</div>
 	</div>
-	<a class="btn btn-default col-md-3 btn-back" href=""><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a class="btn btn-default col-md-3 btn-back"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div>
