--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -1,7 +1,7 @@
 <div class="page-header">
 	<ul class="breadcrumbs">
 		<li class="nav-home">
-			<a class="home" href="">
+			<a class="home">
 				<i class="flaticon-home"></i>
 			</a>
 		</li>
