--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -2,7 +2,7 @@
 	<ul class="breadcrumbs">
 		<li class="nav-home">
 			<a class="home">
-				<i class="flaticon-home"></i>
+				<i class="flaticon-home"></i> 
 			</a>
 		</li>
 		<li class="separator">
@@ -24,8 +24,8 @@
 				<div class="card-body">
 					<ul style="padding-left: 0px;">
 						<li class="contentnode"><dl><dt>Negara</dt><dd>Indonesia</dd></dl></li>
-						<li class="contentnode"><dl><dt>Zona Waktu</dt><dd>Asia/Jakarta</dd></dl></li>
-						<!--<li class="contentnode"><dl><dt>Nomor Induk Siswa Nasional</dt><dd>0000000000</dd></dl></li>
+						<!--<li class="contentnode"><dl><dt>Zona Waktu</dt><dd>Asia/Jakarta</dd></dl></li>
+						<li class="contentnode"><dl><dt>Nomor Induk Siswa Nasional</dt><dd>0000000000</dd></dl></li>
 						<li class="contentnode"><dl><dt>Kelas</dt><dd>11</dd></dl></li>
 						<li class="contentnode"><dl><dt>Jenis Kelamin</dt><dd>L</dd></dl></li>-->
 						<li class="contentnode"><dl><dt>Nomor Pokok Sekolah Nasional/Kode Perguruan Tinggi</dt><dd>20322740</dd></dl></li>
