--- a/peserta/modul/tes_jaringan.html
+++ b/peserta/modul/tes_jaringan.html
@@ -22,7 +22,7 @@
 
 <div class="page-inner mt--5">
 	<div class="row mt--2">
-		<div class="col"> <!-- data -->
+		<div class="col"> 
 			<div class="card">
 				<div class="card-header">
 					<h4 class="card-title">TES JARINGAN SERVER</h4>
