--- a/peserta/modul/tes_jaringan.html
+++ b/peserta/modul/tes_jaringan.html
@@ -1,7 +1,7 @@
 <div class="page-header">
 	<ul class="breadcrumbs">
 		<li class="nav-home">
-			<a href="javascript:halaman(home)">
+			<a href="javascript:halaman('home')">
 				<i class="flaticon-home"></i>
 			</a>
 		</li>
