--- a/peserta/modul/tes_jaringan.html
+++ b/peserta/modul/tes_jaringan.html
@@ -47,7 +47,7 @@
 						</tbody>
 					</table>
 					<center>
-						<button class="btn btn-info test-jaringan"><i class="fas fa-cogs"></i> CEK LAGI</button>
+						<button class="btn btn-info test-jaringan"><i class="fas fa-cogs"></i> CEK</button>
 					</center>
 				</div>
 			</div>
