--- a/peserta/index.html
+++ b/peserta/index.html
@@ -122,7 +122,7 @@
 							<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 								<span>
 								PUTRAKU RULIFF ABBAS
-									<span class="user-level">OSN ASTRONOMI<?=$data['nip'] ?></span>
+									<span class="user-level">OSN ASTRONOMI</span>
 									<span class="caret"></span>
 								</span>
 							</a>
