--- a/peserta/modul/ujian.html
+++ b/peserta/modul/ujian.html
@@ -29,7 +29,7 @@
 							</span>
 						</p>
 						<center>
-							<a href="" class="btn btn-info"><i class="fas fa-edit"></i> Buka</a>
+							<a href="javascript:halaman('to_osnk')" class="btn btn-info"><i class="fas fa-edit"></i> Buka</a>
 						</center>
 					</form>
 				</div>
@@ -48,7 +48,7 @@
 							</span>
 						</p>
 						<center>
-							<a href="" class="btn btn-info"><i class="fas fa-edit"></i> Buka</a>
+							<a href="javascript:halaman('osnk')" class="btn btn-info"><i class="fas fa-edit"></i> Buka</a>
 						</center>
 					</form>
 				</div>
