--- a/peserta/index.html
+++ b/peserta/index.html
@@ -7,6 +7,7 @@
 	<link rel="icon" href="../assets/img/icon.ico" type="image/x-icon"/>
 
 	<!-- Fonts and icons -->
+	<script src="https://kit.fontawesome.com/4151c061e6.js"></script>
 	<script src="../assets/js/plugin/webfont/webfont.min.js"></script>
 	<script>
 		WebFont.load({
