--- a/peserta/modul/to_osnk.html
+++ b/peserta/modul/to_osnk.html
@@ -195,3 +195,43 @@
 	</div>
 	<a class="btn btn-default col-md-3 btn-back"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div>
+
+<style>
+.instancename {
+    color: #555;
+}
+.resourcelinkdetails {
+	font-size: .8em;
+	color: #555;
+}
+.list-item {
+	margin-bottom:10px;
+}
+.activityiconcontainer.collaboration, .current .activityiconcontainer.collaboration {
+    background-color: #f7634d;
+}
+.activityiconcontainer {
+    width: 50px;
+    height: 50px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3a303a;
+    border-radius: 4px;
+    padding: 0!important;
+}
+.activityiconcontainer.courseicon {
+    margin: 0 8px 0 8px!important;
+}
+
+.activityiconcontainer.content, .current .activityiconcontainer.content {
+    background-color: #399be2;
+}
+
+.activity-item .afterlink {
+    margin: 0.6rem 0 0 1rem;
+}
+.description{
+	padding-top: 10px;
+}
+</style>
