--- a/peserta/modul/to_osnk.html
+++ b/peserta/modul/to_osnk.html
@@ -110,7 +110,7 @@
 										</div>
 										<div class="media-body align-self-center">
 											<div class="activityname">
-												<a href="./Announcements.html" class=" aalink stretched-link"> 
+												<a href="javascript:halaman('forum')" class=" aalink stretched-link"> 
 													<span class="instancename">Forum Pemberitahuan</span>   
 												</a> 
 											</div>
@@ -136,7 +136,7 @@
                                                 </div>
                                                 <div class="media-body align-self-center">
                                                     <div class="activityname">
-														<a href="./assets/pdf/tabelOSNAstronomi.pdf" class="stretched-link">
+														<a href="https://r26ast.github.io/osn/assets/pdf/tabelOSNAstronomi.pdf" class="stretched-link">
 															<span class="instancename">Download DATA dan KONSTANTA </span>    
 														</a>
 													</div>
@@ -193,7 +193,7 @@
 			</div>
 		</div>
 	</div>
-	<a class="btn btn-default col-md-3 btn-back"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a class="btn btn-default col-md-3" href="javascript:halaman('ujian')"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div>
 
 <style>
