--- a/peserta/modul/to_osnk.html
+++ b/peserta/modul/to_osnk.html
@@ -33,7 +33,7 @@
 							<h1 class="font-weight-bold" style="text-align: center;">TO OSN-K Astronomi <span class="tahun"></span></h1>
 							<br>
 							<p style="text-align: center;">
-								<img src="./assets/img/linimasa.png" alt="Linimasa jenjang OSN Astronomi" class="img-fluid atto_image_button_middle" width="509" height="302">
+								<img src="https://r26ast.github.io/osn/assets/img/linimasa.png" alt="Linimasa jenjang OSN Astronomi" class="img-fluid atto_image_button_middle" width="509" height="302">
 							</p>
 							<br>
 							<h4 class="font-weight-bold">Penjelasan ringkas fitur aplikasi TO OSN-K Astronomi</h4>
