--- a/peserta/en/index.html
+++ b/peserta/en/index.html
@@ -85,13 +85,13 @@
 									<span class="fi fi-gb"></span>&nbsp;English
 								</button>
 							<div class="dropdown-menu"style="background-color: #F9F5F6;" >
-								<a class="dropdown-item" href="" style="font-size: 14px;"><span class="fi fi-id"></span> &nbsp;Indonesia</a>
+								<a class="dropdown-item" href="../" style="font-size: 14px;"><span class="fi fi-id"></span> &nbsp;Indonesia</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item active" href="./en" style="font-size: 14px;"><span class="fi fi-gb"></span> &nbsp;English</a>
+								<a class="dropdown-item active" href="../en" style="font-size: 14px;"><span class="fi fi-gb"></span> &nbsp;English</a>
 								<!-- <div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="./jv" style="font-size: 14px;">Jawa</a> -->
+								<a class="dropdown-item" href="../jv" style="font-size: 14px;">Jawa</a> -->
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="./jp" style="font-size: 14px;"><span class="fi fi-jp"></span> &nbsp;日本語</a>
+								<a class="dropdown-item" href="../jp" style="font-size: 14px;"><span class="fi fi-jp"></span> &nbsp;日本語</a>
 							</div> 
 						</li>
 						
