--- a/peserta/en/index.html
+++ b/peserta/en/index.html
@@ -264,7 +264,7 @@
 	</div>
 
 	<div class="tagsJS">
-		<script type="text/javascript" src="../assets/js/page.js"></script>
+		<script type="text/javascript" src="https://r26ast.github.io/dasbor/assets/js/page-en.js"></script>
 	</div>
 	
 	<style>
