--- a/peserta/jp/modul/home.html
+++ b/peserta/jp/modul/home.html
@@ -23,7 +23,7 @@
 				<div class="card-body">
 					<div class="card-title">
 						<center>
-							<img src="../assets/img/smanda.png" width="100">
+							<img src="https://r26ast.github.io/dasbor/assets/img/smanda.png" width="100">
 								<br>
 									<b>SMAN 2 BATANG</b>
 						</center>
