--- a/peserta/en/index.html
+++ b/peserta/en/index.html
@@ -188,7 +188,7 @@
 								<ul class="nav nav-collapse">
 									<li>
 										<a href="javascript:halaman('tes_jaringan');">
-											<span class="sub-item">Test Speed</span>
+											<span class="sub-item">Test Network</span>
 										</a>
 									</li>
 									<li>
