--- a/peserta/jp/modul/home.html
+++ b/peserta/jp/modul/home.html
@@ -46,8 +46,8 @@
 					<ul class="nav nav-pills nav-primary  nav-pills-no-bd nav-pills-icons justify-content-center" id="pills-tab-with-icon" role="tablist">
 						<li class="nav-item">
 							<a class="nav-link" id="pills-home-tab-icon" data-toggle="pill" href="#pills-home-icon" role="tab" aria-controls="pills-home-icon" aria-selected="true">
-								<i class="fas fa-clipboard-list"></i>
-									Absen
+								<i class="fas fa-clipboard-check"></i>
+									テスト
 							</a>
 						</li>
 						<li class="nav-item">
@@ -67,16 +67,18 @@
 						<div class="tab-pane fade" id="pills-home-icon" role="tabpanel" aria-labelledby="pills-home-tab-icon">
 							<p>
 								<ul class="list-group">
-									<?php
-
-										foreach ($mengajar as $dm) { ?>
-															<li class="list-group-item">
-																<a class="btn btn-primary btn-block text-left" href="?page=absen&pelajaran=<?=$dm['id_mengajar'] ?> ">
-																	<i class="fas fa-chevron-circle-right"></i>
-																<span class="sub-item"><?=strtoupper($dm['mapel']); ?> (<?=strtoupper($dm['nama_kelas']); ?>)</span>
-																</a>
-															</li>
-														<?php } ?>
+									<li class="list-group-item">
+										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('to_osnk');">
+											<i class="fas fa-chevron-circle-right"></i>
+											<span class="sub-item">TO OSN-K ASTRONOMI</span>
+										</a>
+									</li>
+									<li class="list-group-item">
+										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('osnk');">
+											<i class="fas fa-chevron-circle-right"></i>
+											<span class="sub-item">OSN-K ASTRONOMI</span>
+										</a>
+									</li>
 								</ul>
 							</p>
 						</div>
