--- a/peserta/jp/modul/profil.html
+++ b/peserta/jp/modul/profil.html
@@ -59,10 +59,10 @@
 							<hr>
 							<form action="" method="post">
 								<div class="form-group">
-										<input name="pass" type="text" class="form-control" placeholder="Password Lama">
+									<input name="pass" type="text" class="form-control" placeholder="以前のパスワード">
 								</div>
 								<div class="form-group">
-									<input name="pass1" type="text" class="form-control" placeholder="Password Baru">
+									<input name="pass1" type="text" class="form-control" placeholder="新しいパスワード">
 								</div>
 								<div class="form-group">									
 									<button name="changePassword" type="submit" class="btn btn-success btn-block">パスワードを変更する</button>
