--- a/peserta/modul/to_osnk.html
+++ b/peserta/modul/to_osnk.html
@@ -183,7 +183,7 @@
 									</div>
 								</div>
 								<div class="description">
-									OSN-K Astronomi tahun 2024 yang terdiri atas 40 soal pilihan ganda biasa dan pilihan ganda kompleks.<br>
+									OSN-K Astronomi tahun <span class="tahun"></span> yang terdiri atas 40 soal pilihan ganda biasa dan pilihan ganda kompleks.<br>
 									Peserta dibatasi oleh waktu pengerjaan selama 2 jam (120 menit).
 								</div>
 							</div>
