--- a/peserta/index.html
+++ b/peserta/index.html
@@ -271,7 +271,8 @@
 
 	<div class="tagsJS">
 		<script type="text/javascript" src="../assets/js/page.js"></script>
-		<script>
+		<script type="text/javascript" src="../assets/evo-calendar/js/evo-calendar-2.js"></script>
+		<script type="text/javascript">
 			$('#evoCalendar').addClass('event-hide');
 			$('#evoCalendar').evoCalendar({
 				language:'id',
