--- a/peserta/jp/index.html
+++ b/peserta/jp/index.html
@@ -275,7 +275,7 @@
 		<script type="text/javascript">
 			$('#evoCalendar').addClass('event-hide');
 			$('#evoCalendar').evoCalendar({
-				language:'id',
+				language:'jp',
 				theme: 'Royal Navy',
 				//theme: 'Orange Coral',
 				todayHighlight: true,
