--- a/peserta/jp/modul/kalender.html
+++ b/peserta/jp/modul/kalender.html
@@ -11,13 +11,13 @@
 				<i class="flaticon-right-arrow"></i>
 			</li>
 			<li class="nav-item">
-				<a href="#">Fitur</a>
+				<a href="#">特徴</a>
 			</li>
 			<li class="separator">
 				<i class="flaticon-right-arrow"></i>
 			</li>
 			<li class="nav-item">
-				<a href="#">Kalender</a>
+				<a href="#">カレンダー</a>
 			</li>
 		</ul>
 	</div>
@@ -27,7 +27,7 @@
 		<div class="col col-xs-12">
 			<div class="card">
 				<div class="card-header">
-					<h4 class="card-title">Kalender</h4>
+					<h4 class="card-title">カレンダー</h4>
 				</div>
 				<div class="card-body">
 					<div id="evoCalendar"></div>
