--- a/peserta/jp/modul/kalender.html
+++ b/peserta/jp/modul/kalender.html
@@ -36,5 +36,5 @@
 			</div>	
 		</div>
 	</div>
-	<a href="javascript:halaman('home')" class="btn btn-default col-md-3"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a href="javascript:halaman('home')" class="btn btn-default col-md-3"><i class="fas fa-arrow-circle-left"></i> 戻る</a>
 </div>
