--- a/peserta/modul/to_osnk.html
+++ b/peserta/modul/to_osnk.html
@@ -1,26 +1,25 @@
-<div class="page-header">
-	<ul class="breadcrumbs">
-		<li class="nav-home">
-			<a href="javascript:halaman('home')">
-				<i class="flaticon-home"></i>
-			</a>
-		</li>
-		<li class="separator">
-			<i class="flaticon-right-arrow"></i>
-		</li>
-		<li class="nav-item">
-			<a href="javascript:halaman('ujian')">Ujian</a>
-		</li>
-		<li class="separator">
-			<i class="flaticon-right-arrow"></i>
-		</li>
-		<li class="nav-item">
-			<a href="#">TO OSN-AST<span class="thn-2-angka"></span></a>
-		</li>
-	</ul>
-</div><br>
-
-<div class="page-inner mt--5">
+<div class="page-inner">
+	<div class="page-header">
+		<ul class="breadcrumbs">
+			<li class="nav-home">
+				<a href="javascript:halaman('home')">
+					<i class="flaticon-home"></i>
+				</a>
+			</li>
+			<li class="separator">
+				<i class="flaticon-right-arrow"></i>
+			</li>
+			<li class="nav-item">
+				<a href="javascript:halaman('ujian')">Ujian</a>
+			</li>
+			<li class="separator">
+				<i class="flaticon-right-arrow"></i>
+			</li>
+			<li class="nav-item">
+				<a href="#">TO OSN-AST<span class="thn-2-angka"></span></a>
+			</li>
+		</ul>
+	</div>
 	<div class="row mt--2">
 		<div class="col"> <!-- data -->
 			<div class="card">
