--- a/peserta/index.html
+++ b/peserta/index.html
@@ -394,9 +394,9 @@
 
 		let main = document.getElementById('main');
 		window.onclick = function(event) {
-		    if (event.target != $('.btn-toggle')) {
+		    if (event.target != $('.toggle-sidebar')) {
 		        //sidebar.classList.add('toggled');
-			$('.btn-toggle').click();
+			$('.toggle-sidebar').click();
 		    }
 		};
 	</script>
