--- a/peserta/index.html
+++ b/peserta/index.html
@@ -395,8 +395,8 @@
 		let main = document.getElementById('main');
 		window.onclick = function(event) {
 		    if (event.target != $('.toggle-sidebar')) {
-		        //sidebar.classList.add('toggled');
-			$('.toggle-sidebar').click();
+		        $('.toggle-sidebar').addClass('toggled');
+			//$('.toggle-sidebar').click();
 		    }
 		};
 	</script>
