--- a/peserta/index.html
+++ b/peserta/index.html
@@ -395,7 +395,8 @@
 		let main = document.getElementById('main');
 		window.onclick = function(event) {
 		    if (event.target != $('.toggle-sidebar')) {
-		        $('.toggle-sidebar').addClass('toggled');
+			    console.log('tutup');
+		        //$('.toggle-sidebar').addClass('toggled');
 			//$('.toggle-sidebar').click();
 		    }
 		};
