--- a/peserta/index.html
+++ b/peserta/index.html
@@ -394,7 +394,7 @@
 
 		let main = document.getElementById('main');
 		window.onclick = function(event) {
-		    if (event.target != $('.toggle-sidebar')) {
+		    if (event.target != $('.nav-toggle')) {
 			    console.log('tutup');
 		        //$('.toggle-sidebar').addClass('toggled');
 			//$('.toggle-sidebar').click();
