--- a/peserta/index.html
+++ b/peserta/index.html
@@ -395,7 +395,7 @@
 		let main = document.getElementById('main');
 		window.onclick = function(event) {
 		    if (event.target != $('.nav-toggle')) {
-			    console.log('tutup');
+			    //console.log('tutup');
 		        //$('.toggle-sidebar').addClass('toggled');
 			//$('.toggle-sidebar').click();
 		    }
