--- a/peserta/index.html
+++ b/peserta/index.html
@@ -44,8 +44,8 @@
 			<!-- Logo Header -->
 			<div class="logo-header" data-background-color="blue">
 				
-				<a href="index.php" class="logo">
-					<!-- <img src="../assets/img/mts.png" alt="navbar brand" class="navbar-brand" width="40"> -->
+				<a href="#" class="logo">
+					<img src="../assets/img/r26.png" alt="navbar brand" class="navbar-brand" width="40">
 					<b class="text-white">SMAN 2 BATANG</b>
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
