--- a/peserta/index.html
+++ b/peserta/index.html
@@ -396,11 +396,11 @@
 		halaman('home');
 
 		document.onclick = function(e) {
-		    if (e.target != $('.nav-toggle') || e.target != $('.btn .btn-toggle .toggle-sidebar')) {
+		    if (e.target != $('.btn .btn-toggle .toggle-sidebar')) {
 		    //if (!$('.wrapper').contains(e.target) && !$('.btn .btn-toggle .toggle-sidebar').contains(e.target)) {
 			$('.wrapper').addClass('sidebar_minimize');
 			$('.toggle-sidebar').addClass('toggled');
-			    //console.log('tutup');
+			    console.log('tutup');
 		        //$('.toggle-sidebar').addClass('toggled');
 			//$('.toggle-sidebar').click();
 		    }
