--- a/peserta/index.html
+++ b/peserta/index.html
@@ -396,7 +396,7 @@
 		halaman('home');
 
 		document.onclick = function(e) {
-		    if (e.target != $('.btn .btn-toggle .toggle-sidebar')) {
+		    if (e.target != $('.logo-header')) {
 		    //if (!$('.wrapper').contains(e.target) && !$('.btn .btn-toggle .toggle-sidebar').contains(e.target)) {
 			$('.wrapper').addClass('sidebar_minimize');
 			$('.toggle-sidebar').addClass('toggled');
