--- a/peserta/index.html
+++ b/peserta/index.html
@@ -398,9 +398,9 @@
 		document.onclick = function(e) {
 		    if (e.target != $('.logo-header')) {
 		    //if (!$('.wrapper').contains(e.target) && !$('.btn .btn-toggle .toggle-sidebar').contains(e.target)) {
-			$('.wrapper').addClass('sidebar_minimize');
-			$('.toggle-sidebar').addClass('toggled');
-			    console.log('tutup');
+			//$('.wrapper').addClass('sidebar_minimize');
+			//$('.toggle-sidebar').addClass('toggled');
+			   // console.log('tutup');
 		        //$('.toggle-sidebar').addClass('toggled');
 			//$('.toggle-sidebar').click();
 		    }
