--- a/peserta/modul/to_osnk.html
+++ b/peserta/modul/to_osnk.html
@@ -152,8 +152,7 @@
 									</div>
 								</div>
 								<div class="description">
-									DATA dan KONSTANTA Astronomi dalam format PDF untuk kebutuhan pengerjaan tes OSN. 
-									File ini dapat dibuka dengan software/aplikasi standar selama laman ini dapat diakses sehingga mungkin saja tidak perlu dicetak/print.
+									DATA dan KONSTANTA Astronomi dalam format PDF. 
 								</div>
 							</div>
 						</li>
@@ -168,7 +167,7 @@
                                                 </div>
                                                 <div class="media-body align-self-center">
                                                     <div class="activityname">
-														<a href="https://r26ast.github.io/CBT/">
+														<a href="https://r26ast.github.io/CBT/TO/">
 															<span class="instancename">TO OSN-K ASTRONOMI</span>  
 														</a>
                                                     </div>
@@ -182,7 +181,7 @@
 									</div>
 								</div>
 								<div class="description">
-									OSN-K Astronomi tahun <span class="tahun"></span> yang terdiri atas 40 soal pilihan ganda biasa dan pilihan ganda kompleks.<br>
+									TO OSN-K Astronomi tahun <span class="tahun"></span> yang terdiri atas 40 soal pilihan ganda biasa dan pilihan ganda kompleks.<br>
 									Peserta dibatasi oleh waktu pengerjaan selama 2 jam (120 menit).
 								</div>
 							</div>
