--- a/peserta/modul/osnk.html
+++ b/peserta/modul/osnk.html
@@ -101,7 +101,7 @@
 					</div>
 					<ul class="section m-0 p-0 img-text  d-block list-group" data-for="cmlist">
 						<li class="list-group-item" data-for="cmitem" data-draggroups="resource" data-indexed="true">
-							<div class="activity-item " data-activityname="Announcements">
+							<div class="activity-item" data-activityname="Announcements">
 								<div class="activity-instance ">
 									<div class="activitytitle media  modtype_forum position-relative align-self-start">
 										<div class="activityiconcontainer collaboration courseicon align-self-start mr-3">
@@ -121,6 +121,31 @@
                                         </div>
 									</div> 
 									<div class="description" hidden>
+									</div>
+								</div>
+						</li>
+						<li class="list-group-item" data-for="cmitem" data-draggroups="resource" data-indexed="true">
+							<div class="activity-item " data-activityname="Pakta Integritas">
+								<div class="activity-instance ">
+									<div class="activitytitle media modtype_forum position-relative align-self-start">
+										<div class="activityiconcontainer btn-black courseicon align-self-start mr-3">
+											<i class="fa-solid fa-file-check fa-2x" style="color: white"></i>
+										</div>
+										<div class="media-body align-self-center">
+											<div class="activityname">
+												<a href="javascript:halaman('pakta')" class=" aalink stretched-link"> 
+													<span class="instancename">Pakta Integritas</span>   
+												</a> 
+											</div>
+										</div>
+									</div>
+									</div>
+									<div class="activity-info mt-1 mt-md-0">
+                                        <div data-region="activity-information" data-activityname="Pakta Integritas" class="activity-information">
+                                        </div>
+									</div> 
+									<div class="description">
+										Para peserta diwajibkan untuk mengisi Pakta Integritas mengikuti OSN ASTRONOMI.
 									</div>
 								</div>
 						</li>
@@ -157,11 +182,11 @@
 							</div>
 						</li>
 						<li class="list-group-item">
-							<div class="activity-item " data-activityname="Download DATA dan KONSTANTA">
+							<div class="activity-item " data-activityname="OSN-K ASTRONOMI">
 								<div class="activity-basis d-flex align-items-center">
 									<div class="d-flex flex-column flex-md-row w-100 align-self-start">
                                         <div class="activity-instance d-flex flex-column">
-                                            <div class="activitytitle media  modtype_resource position-relative align-self-start">
+                                            <div class="activitytitle media modtype_resource position-relative align-self-start">
                                                 <div class="activityiconcontainer btn-success courseicon align-self-start mr-3">
 												<i class="fa fa-pencil-square-o fa-2x" style="color: white"></i>
                                                 </div>
@@ -175,7 +200,7 @@
                                             </div>
                                         </div>
 										<div class="activity-info mt-1 mt-md-0">
-												<div data-region="activity-information" data-activityname="TO OSN ASTRONOMI" class="activity-information">
+												<div data-region="activity-information" data-activityname="OSN-K ASTRONOMI" class="activity-information">
 												</div>
 										</div>
 									</div>
