--- a/peserta/modul/to_osnk.html
+++ b/peserta/modul/to_osnk.html
@@ -157,7 +157,7 @@
 							</div>
 						</li>
 						<li class="list-group-item">
-							<div class="activity-item " data-activityname="Download DATA dan KONSTANTA">
+							<div class="activity-item " data-activityname="TO OSN-K ASTRONOMI">
 								<div class="activity-basis d-flex align-items-center">
 									<div class="d-flex flex-column flex-md-row w-100 align-self-start">
                                         <div class="activity-instance d-flex flex-column">
@@ -175,7 +175,7 @@
                                             </div>
                                         </div>
 										<div class="activity-info mt-1 mt-md-0">
-												<div data-region="activity-information" data-activityname="TO OSN ASTRONOMI" class="activity-information">
+												<div data-region="activity-information" data-activityname="TO OSN-K ASTRONOMI" class="activity-information">
 												</div>
 										</div>
 									</div>
