--- a/peserta/modul/osnk.html
+++ b/peserta/modul/osnk.html
@@ -129,7 +129,7 @@
 								<div class="activity-instance ">
 									<div class="activitytitle media modtype_forum position-relative align-self-start">
 										<div class="activityiconcontainer btn-black courseicon align-self-start mr-3">
-											<i class="fa-solid fa-file-check fa-2x" style="color: white"></i>
+											<i class="fa fa-check-square-o fa-2x" style="color: white"></i>
 										</div>
 										<div class="media-body align-self-center">
 											<div class="activityname">
